2001-11-29  Miles Lane <miles@megapathdsl.net>

	* configure.in: Removed intl/Makefile from AC_OUTPUT
	since there is no intl subdirectory in the repository.

2001-11-29  Bradford Hovinen  <hovinen@ximian.com>

	* configure.in: Disabled archiver

	* Makefile.am (SUBDIRS): Disabled archiver

2001-11-28  Richard Hestilow  <hestilow@ximian.com>

	* configure.in: Remove gtkhtml-2.0 check since we no longer
	depend on it.

2001-10-27  Bradford Hovinen  <hovinen@ximian.com>

	* configure.in: Bump version to 1.99.0

2001-10-26  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am: Remove intl from SUBDIRS

	* */Makefile.am: s/XML_I18N_MERGE/INTLTOOL/g

	* capplets/Makefile.am: Remove screensaver from
	always_built_SUBDIRS and add $(SCREENSAVER) to SUBDIRS

	* capplets/{background|keyboard|mouse|sound}/Makefile.am:
	Fix so that automake does not choke on these files

	* README: Updated to reflect current status porting to GNOME 2

	* configure.in: Cleanup for GNOME 2 port
	Allow disabling of screensaver capplet compile if xscreensaver
	is not found
	(AC_OUTPUT): Removed dnl capplets/rollback/Makefile as it caused
	some difficulties

2001-10-23  Wang Jian  <lark@linux.net.cn>

	* configure.in(ALL_LINGUAS): Added zh_CN for Simplified Chinese.

2001-10-18  Bradford Hovinen  <hovinen@ximian.com>

	* capplets/Makefile.am (always_built_SUBDIRS): Put common in
	always_built_SUBDIRS

	* configure.in (dnl): Remove --enable-bonobo-conf option

2001-10-11  Israel Escalante  <israel@ximian.com>

	* configure.in: Bump version to 1.5.10

2001-10-11  Israel Escalante  <israel@ximian.com>

	* configure.in (gnome_cv_use_gnome): Bump requirement for
	gtkhtml >=0.15.0 and version to 1.5.9. Committed patch
	from peter@ximian.com to fix some build issues.

2001-10-07  Gediminas Paulauskas <menesis@delfi.lt>

	* configure.in (ALL_LINGUAS): added lv

2001-10-02  Jakub Steiner <jimmac@ximian.com>

	* control-center.png: new application icon

2001-09-28  Israel Escalante  <israel@ximian.com>
